css/style.css
@font-face {
  font-family: 'icomoon';
  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
  font-weight: normal;
  font-style: normal; }

/* =======================================================
*
* 	Template Style 
*	Edit this section
*
* ======================================================= */
body {
  font-family: "Quicksand", Arial, sans-serif;
  font-weight: 400;
  font-size: 15px;
  line-height: 1.8;
  color: rgba(0, 0, 0, 0.7); }
  @media screen and (max-width: 992px) {
    body {
      font-size: 16px; } }

a {
  color: #2c98f0;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s; }
  a:hover, a:active, a:focus {
    color: #2c98f0;
    outline: none;
    text-decoration: none !important; }

p {
  margin-bottom: 1.5em; }

h1, h2, h3, h4, h5, h6 {
  color: #000;
  font-family: "Playfair Display", Georgia, serif;
  font-weight: 400;
  margin: 0 0 30px 0; }

figure {
  margin-bottom: 2.5em;
  float: left;
  width: 100%; }
  figure figcaption {
    font-size: 16px;
    width: 80%;
    margin: 20px auto 0px auto;
    color: #b3b3b3;
    font-style: italic;
    font-family: "Quicksand", Arial, sans-serif; }
    @media screen and (max-width: 480px) {
      figure figcaption {
        width: 100%; } }

::-webkit-selection {
  color: #fff;
  background: #2c98f0; }

::-moz-selection {
  color: #fff;
  background: #2c98f0; }

::selection {
  color: #fff;
  background: #2c98f0; }

#colorlib-page {
  width: 100%;
  overflow: hidden;
  position: relative; }

#colorlib-aside {
  padding-top: 3em;
  padding-bottom: 40px;
  float: left;
  width: 300px;
  position: fixed;
  overflow-y: scroll;
  z-index: 1001;
  background: #f2f3f7;
  -webkit-transition: 0.5s;
  -o-transition: 0.5s;
  transition: 0.5s; }
  @media screen and (max-width: 768px) {
    #colorlib-aside {
      width: 300px;
      -moz-transform: translateX(-300px);
      -webkit-transform: translateX(-300px);
      -ms-transform: translateX(-300px);
      -o-transform: translateX(-300px);
      transform: translateX(-300px);
      padding-top: 4em; } }
  #colorlib-aside .author-img {
    width: 150px;
    height: 150px;
    margin: 0 auto;
    margin-bottom: 30px;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    border-radius: 50%; }
  #colorlib-aside .position {
    display: block;
    margin-bottom: 2em;
    font-size: 12px;
    text-transform: uppercase; }
  #colorlib-aside #colorlib-logo {
    font-weight: 700;
    font-size: 22px;
    margin-bottom: .5em;
    display: block;
    width: 100%; }
  #colorlib-aside #colorlib-main-menu {
    display: block;
    width: 100%; }
    #colorlib-aside #colorlib-main-menu .collapse {
      display: block !important; }
    #colorlib-aside #colorlib-main-menu ul {
      text-align: center;
      margin: 0;
      padding: 0; }
      @media screen and (max-width: 768px) {
        #colorlib-aside #colorlib-main-menu ul {
          margin: 0 0 2em 0; } }
      #colorlib-aside #colorlib-main-menu ul li {
        margin: 0 0 10px 0;
        padding: 0;
        list-style: none;
        font-size: 12px;
        font-weight: 500;
        text-transform: uppercase;
        letter-spacing: 1px; }
        #colorlib-aside #colorlib-main-menu ul li a {
          color: rgba(0, 0, 0, 0.7);
          text-decoration: none;
          position: relative;
          padding: 10px 0;
          font-family: "Quicksand", Arial, sans-serif;
          -webkit-transition: 0.3s;
          -o-transition: 0.3s;
          transition: 0.3s; }
          #colorlib-aside #colorlib-main-menu ul li a:after {
            content: "";
            position: absolute;
            height: 1px;
            bottom: 7px;
            left: 0;
            right: 0;
            background-color: #2c98f0;
            visibility: hidden;
            -webkit-transform: scaleX(0);
            -moz-transform: scaleX(0);
            -ms-transform: scaleX(0);
            -o-transform: scaleX(0);
            transform: scaleX(0);
            -webkit-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
            -moz-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
            -ms-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
            -o-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
          #colorlib-aside #colorlib-main-menu ul li a:hover {
            text-decoration: none;
            color: black; }
            #colorlib-aside #colorlib-main-menu ul li a:hover:after {
              visibility: visible;
              -webkit-transform: scaleX(1);
              -moz-transform: scaleX(1);
              -ms-transform: scaleX(1);
              -o-transform: scaleX(1);
              transform: scaleX(1); }
        #colorlib-aside #colorlib-main-menu ul li.active a {
          color: #2c98f0; }
          #colorlib-aside #colorlib-main-menu ul li.active a:after {
            visibility: visible;
            -webkit-transform: scaleX(1);
            -moz-transform: scaleX(1);
            -ms-transform: scaleX(1);
            -o-transform: scaleX(1);
            transform: scaleX(1); }
  #colorlib-aside .colorlib-footer {
    font-size: 15px;
    text-align: center;
    font-weight: 400;
    color: rgba(0, 0, 0, 0.5);
    padding: 0 20px;
    width: 100%; }
    @media screen and (max-width: 768px) {
      #colorlib-aside .colorlib-footer {
        position: relative;
        bottom: 0; } }
    #colorlib-aside .colorlib-footer span {
      display: block; }
    #colorlib-aside .colorlib-footer ul {
      padding: 0;
      margin: 0; }
/* ... */

